Services/kubia-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-kubia
  labels:
    app: kubia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
      - name: kubia
        image: denbarkin/kubia
        ports:
          - containerPort: 8080
