Services/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  external-service
spec:
  ports:
    - port: 80
