Services/kubia-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-lbaas
spec:
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
