Services/kubia-service-ext-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-kubia-svc
spec:
  selector:
    app: kubia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
